<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search querry</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="image_content_description">Image Result</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_settings_menu">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Advanced search options</string>
    <string name="settings_image_size_title">Image Size</string>
    <string name="settings_color_filter_title">Color Filter</string>
    <string name="settings_Image_Type_title">Image Type</string>
    <string name="settings_site_filter_title">Site filter</string>
    <string name="settings_save_button_title">Save</string>
    <string name="settings_site_filter_hint">i.e espn.com</string>

</resources>
