<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tonytcleung.googleimageviewer.activities.SettingsActivity" >

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="20dp"
        android:text="@string/settings_image_size_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="20dp"
        android:text="@string/settings_color_filter_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvImageSize" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="20dp"
        android:text="@string/settings_Image_Type_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="20dp"
        android:text="@string/settings_site_filter_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvImageType"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageSize" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/spColorFilter"
        android:layout_below="@+id/spColorFilter" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_below="@+id/spImageType"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/settings_save_button_title" />

</RelativeLayout>
